Add move function for bus.